=========
CHANGELOG
=========

-------------------------------------------------------------------------------
February, 23, 2023 1.1.0
-------------------------------------------------------------------------------

Major:
- Updated requirements to use mabwiser>=2.7 to benefit from enhancements,
  including vectorized predict for Linear policies and tracking of arm status.
- Fixed tests due to changes in random seeding for Linear policies.

-------------------------------------------------------------------------------
August, 16, 2022 1.0.3
-------------------------------------------------------------------------------

Minor:
- Fixed bug with inconsistency between scored and eligible items.

-------------------------------------------------------------------------------
July, 5, 2022 1.0.2
-------------------------------------------------------------------------------

Minor:
- Fixed bug with arguments not being passed correctly to load_response_data.

-------------------------------------------------------------------------------
May, 12, 2022 1.0.1
-------------------------------------------------------------------------------

Minor:
- Add encodings generation to Seq2Pat section in feature_engineering notebook.
- Explicitly claim Mab2Rec requires Python 3.7+ for Installation in README.
- Library source scripts are not updated, thus the pypi version is not changed.

-------------------------------------------------------------------------------
April, 15, 2022 1.0.1
-------------------------------------------------------------------------------

Minor:
- Fix missing top-k recommendations when top messages are excluded - thanks @nateewall!

-------------------------------------------------------------------------------
March, 18, 2022 1.0.0
-------------------------------------------------------------------------------

- Initial public release.